# h5-ecommerce

./: .gitignore  .impeccable.md  README.md
backend/: pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py  seed.py
backend/app/agent/: agent.py  faq.md  knowledge.py  tools.py
backend/app/api/: chat.py  orders.py
backend/tests/: conftest.py  test_agent_factory.py  test_agent_tools.py  test_chat_api.py  test_logistics_info.py  test_orders_api.py  test_products_api.py  test_products_schema.py  test_seed_idempotency.py  test_seed_orders.py  test_seed_products.py  test_smoke.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: CsrPanel.vue
frontend/src/composables/: useChat.js
specs/csr-agent/: journey.md  plan.md  spec.md
specs/h5-ecommerce-demo/: plan.md  spec.md  verify.md
